--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "auth-server / for classes 11 -12- 13 - 14",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --verbose"
+    "test": "jest --coverage --verbose",
+    "lint": "eslint '**/*.js'"
   },
   "repository": {
     "type": "git",
